# linkr

./: .gitignore  Dockerfile  README.md  pyproject.toml
linkr/: package-lock.json  redirecter.py  server.py
linkr/api/: main.py  url.py  user.py
linkr/internal/: db.py  keygen.py  schemas.py
linkr/public/: manifest.json
linkr/src/: App.css  App.js  UrlManager.js
tests/: test_db.py
